--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "pm2-runtime start ecosystem.config.js --env production",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -13,10 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@growthbunker/vuetimeline": "^0.1.17",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
+    "compression": "^1.7.4",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "cosmicjs": "^3.3.1",
     "css-loader": "^3.6.0",
+    "express": "^4.17.1",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-style-loader": "^4.1.2",
