--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "pm2-runtime start ecosystem.config.js --env production",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "prepack": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
