--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npm install pm2 -g",
     "start": "pm2-runtime start ecosystem.config.js --env production",
     "serve": "vue-cli-service serve",
     "prepack": "vue-cli-service build",
