--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "compression": "^1.7.4",
-    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "cosmicjs": "^3.3.1",
     "css-loader": "^3.6.0",
     "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-style-loader": "^4.1.2",
